--- a/week1/friday/index.html
+++ b/week1/friday/index.html
@@ -8,16 +8,49 @@
   </head>
   <body>
     <article>
-    <img src="header-main.jpg" alt="irish landscape" id="cover">
-    <header> This is my first demo.  I've decided to demonstrate my progress in the fisrt week through this site.According to the sample, here should come a simple unordered list of what we learned this week:
-        <ul id="list1">
-          <li> Each other's name (still have problems with that :( )</li>
-          <li>command line</li>
-          <li>basic understanding of git</li>
-          <li>HTML</li>
-        </ul>
-        <img src="4-pic.jpg" alt="Lorem ipsum" width="100%">
-      </header>
+      <section>
+        <img src="header-main.jpg" alt="irish landscape" id="cover">
+        <header> This is my first demo.  I've decided to demonstrate my progress in the fisrt week through this site.According to the sample, here should come a simple unordered list of what we learned this week:
+            <ul id="list1">
+              <li> Each other's name (still have problems with that :( )</li>
+              <li>command line</li>
+              <li>basic understanding of git</li>
+              <li>HTML</li>
+            </ul>
+            <img src="4-pic.jpg" alt="Lorem ipsum" width="100%">
+          </header>
+        </section>
+        <section>
+          <h1> So, let's try to remember what we've done this week:
+          </h1>
+            <h2> Day 1, Getting to know each other:
+              <p> It was awesome, It' gonna be great to work with you guys, honestly :)
+              </p>
+            </h2>
+            <h2> Day 2, General info and basics:
+              <ul>
+                <li> Expectations fulfilled, It's gonna be tough </li>
+                <li> Basics of html, atom editor </li>
+              </ul>
+            </h2>
+            <h2> Day 3, Command line & git:
+              <ul>
+                <li> About git, I'm feeling like John Swow, but it miraculously worked for me </li>
+                <li> Command line is a more direct way to interact with your computer.  </li>
+              </ul>
+            </h2>
+            <h2> Day 4&5, html:
+              <p> I just learned to create this site. I know it's not a big deal, but a week ago it seemed like some kind of dark magic to me...
+              </p>
+            </h2>
+        </section>
+        <section>
+          <div class="box">
+            <p>
+              No time to fill this section, so I made made a box just to show I can
+            </p>
+          </div>
+        </section>
     </article>
   </body>
 
