week1 final save

--- a/week1/friday/index.html
+++ b/week1/friday/index.html
@@ -10,17 +10,20 @@
     <article>
       <section>
         <img src="header-main.jpg" alt="irish landscape" id="cover">
-        <header> This is my first demo.  I've decided to demonstrate my progress in the fisrt week through this site.According to the sample, here should come a simple unordered list of what we learned this week:
-            <ul id="list1">
-              <li> Each other's name (still have problems with that :( )</li>
-              <li>command line</li>
-              <li>basic understanding of git</li>
-              <li>HTML</li>
-            </ul>
-            <img src="4-pic.jpg" alt="Lorem ipsum" width="100%">
-          </header>
-        </section>
-        <section>
+        <header>
+          <p>
+            This is my first demo.  I've decided to demonstrate my progress in the fisrt week through this site.According to the sample, here should come a simple unordered list of what we learned this week:
+          </p>  
+          <ul id="list1">
+            <li> Each other's name (still have problems with that :( )</li>
+            <li>command line</li>
+            <li>basic understanding of git</li>
+            <li>HTML</li>
+          </ul>
+          <img src="4-pic.jpg" alt="Lorem ipsum" width="100%">
+        </header>
+      </section>
+      <section>
           <h1> So, let's try to remember what we've done this week:
           </h1>
             <h2> Day 1, Getting to know each other:
